# middle-manager

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  deny.toml  install.sh
.claude/commands/: review-pr.md
.github/workflows/: ci.yml  release.yml
src/: action.rs  app.rs  azure_auth.rs  azure_blob.rs  ci.rs  clipboard.rs  debug_log.rs  diff_viewer.rs  editor.rs  event.rs  file_search.rs  gcs.rs  hex_viewer.rs  lib.rs  main.rs  nfs_client.rs  parquet_viewer.rs  pr_diff.rs  remote_fs.rs  s3.rs  saved_connections.rs  session.rs  sftp.rs  smb_client.rs  ssh.rs  state.rs  syntax.rs  terminal.rs  text_input.rs  theme.rs  viewer.rs  watcher.rs  webdav.rs
src/fs_ops/: archive.rs  mod.rs
src/panel/: entry.rs  git.rs  github.rs  mod.rs  sort.rs
src/ui/: archive_dialog.rs  azure_auth_dialog.rs  ci_view.rs  copy_dialog.rs  dialog.rs  dialog_helpers.rs  diff_view.rs  diff_viewer_view.rs  editor_view.rs  file_search_dialog.rs  footer.rs  header.rs  help_dialog.rs  hex_view.rs  menu.rs  mkdir_dialog.rs  mod.rs  panel_view.rs  parquet_view.rs  search_dialog.rs  search_results_view.rs  session_dialog.rs  settings_dialog.rs  shadow.rs  ssh_dialog.rs  terminal_view.rs  viewer_view.rs
src/vt/: attrs.rs  cell.rs  color.rs  grid.rs  mod.rs  parser.rs  screen.rs
tests/: integration_remote.rs
