[package]
name = "middle-manager"
version = "0.1.0"
edition = "2021"
description = "A dual-panel file manager TUI inspired by Far Manager"
license = "Apache-2.0"
repository = "https://github.com/questdb/middle-manager"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
chrono = "0.4"
anyhow = "1"
unicode-width = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-toml-ng = "0.7"
vt100 = "0.16"
portable-pty = "0.8"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
