[package]
name = "middle-manager"
version = "0.1.0"
edition = "2021"
description = "A dual-panel file manager TUI inspired by Far Manager"
license = "Apache-2.0"
repository = "https://github.com/questdb/middle-manager"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
chrono = "0.4"
anyhow = "1"
unicode-width = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-toml-ng = "0.7"
vte = "0.15"
portable-pty = "0.8"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
parquet2 = { git = "https://github.com/questdb/parquet2", branch = "main" }
tar = "0.4"
flate2 = "1"
xz2 = "0.1"
zstd = "0.13"
zip = "2"
libc = "0.2"
xattr = "1"

[package.metadata.deb]
maintainer = "QuestDB <hello@questdb.io>"
copyright = "2024, QuestDB"
license-file = ["LICENSE", "0"]
extended-description = """\
A dual-panel file manager for the terminal, inspired by Far Manager. \
Handles very large files with sliding buffers and lazy scanning."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
  ["target/release/middle-manager", "usr/bin/mm", "755"],
  ["README.md", "usr/share/doc/middle-manager/README", "644"],
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/middle-manager", dest = "/usr/bin/mm", mode = "755" },
  { source = "README.md", dest = "/usr/share/doc/middle-manager/README", mode = "644" },
  { source = "LICENSE", dest = "/usr/share/licenses/middle-manager/LICENSE", mode = "644" },
]
